syntax = "proto3";
package stream.relay;

// Config configures the relay controller.
message Config {
  // PeerId is the peer ID to listen for incoming streams.
  // Can be empty to accept any.
  string peer_id = 1;
  // ProtocolId is the protocol ID to filter incoming streams.
  // Cannot be empty.
  string protocol_id = 2;
  // TargetPeerId is the destination peer ID to relay to.
  // Cannot be empty.
  string target_peer_id = 3;
  // TargetProtocolId is the destination protocol ID to relay to.
  // If unset, uses protocol_id.
  string target_protocol_id = 4;
}
